--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         to me, but due to code constraints – I won’t! (Hahaha). Wishing you a very happy birthday. Cheers!
       </p>
       <p class="signed">
-        <u>Made With Love <i class="em-svg em-heart"></i></b><b> By john</u>
+        <u>Made With Love <i class="em-svg em-heart"></i></b><b> By Ritikesh</u>
       </p>
 </div>
 
