--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="card-front_inside">
           <br> <br> <br>
           <div class="polaroid">
-            <div class="img" style="background-image: url('WhatsApp Image 2025-08-10 at 20.40.06.jpeg')"></div>
+            <div class="img" style="background-image: url('WhatsApp-Image-2025-08-10-at-20.40.06.jpeg')"></div>
           </div>
           <div
             data-balloon="I wanted to do something different than ppt's/collages this year and I knew I had to do something creative, so here is a polaroid photo effect (took me a ton of code/brainstorming to achieve that!) 😂"
